# CigiMLOPS

./: README.md  pyproject.toml
res/data/: tc20171021_sample_1000.csv
res/data/processed/: embeddings.npy  listing_ids.npy  listings.parquet
src/: config.py  main.py
src/modules/: 00_create_sample.py  01_prepare_data.py  02_generate_embeddings.py
static/: index.html  script.js  style.css
